Add AGanalytics with Anonymized IP

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 title: ESTIMA – Planning Poker for remote teams
 url: "https://estima.brickmakers.de"
 baseurl:
-google_analytics_key:
+google_analytics_key: UA-55190715-16
 google_maps_javascript_api_key:
 disqus_shortname:
 
